<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOfTitle"
        android:textSize="@dimen/textSizeOfTitle"
        android:textStyle="bold"
        tools:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="200dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:contentDescription="test"
            android:src="@drawable/spiderman" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/release_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date_text_view"
                style="@style/section"
                tools:text="@string/example_release_date" />

            <TextView
                android:id="@+id/vote_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/vote_average"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vote_average_text_view"
                style="@style/section"
                tools:text="@string/date" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/overview_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:textSize="@dimen/textSizeOfDescription"
                tools:text="@string/example_overview" />

        </ScrollView>
    </LinearLayout>

</LinearLayout>